Update tips jitu ampuh bermain bersama kucing lucky neko dan pasti bisa menjadi jackpot besar.html

--- a/tips jitu ampuh bermain bersama kucing lucky neko dan pasti bisa menjadi jackpot besar.html
+++ b/tips jitu ampuh bermain bersama kucing lucky neko dan pasti bisa menjadi jackpot besar.html
@@ -16,7 +16,7 @@
         <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
         <link rel="preconnect dns-prefetch" href="https://fonts.gstatic.com/" crossorigin>
         <meta name="robots" content="index, follow" />
-        <link rel="canonical" href="https://redaksijakarta.github.io/tips jitu ampuh bermain bersama kucing lucky neko dan pasti bisa menjadi jackpot besar.html.html">
+        <link rel="canonical" href="https://redaksijakarta.github.io/news/tips jitu ampuh bermain bersama kucing lucky neko dan pasti bisa menjadi jackpot besar.html">
         <link rel="shortcut icon" href="https://res.cloudinary.com/denamhdw5/image/upload/v1737197996/Lucky_Neko_lkcemh.png">
         <link rel="apple-touch-icon-precomposed" href="https://res.cloudinary.com/denamhdw5/image/upload/v1737205037/logo_bda5ab17-385e-428e-82db-2fc5ec906859_1729255069830_ysxsvm.png" />
         <meta name="author" content="Bandung Daily News" />
