--- a/tips-jitu-ampuh-bermain-bersama-kucing-lucky-neko-dan-pasti-bisa-menjadi-jackpot-besar.html
+++ b/tips-jitu-ampuh-bermain-bersama-kucing-lucky-neko-dan-pasti-bisa-menjadi-jackpot-besar.html
@@ -13,6 +13,7 @@
         <link rel="canonical" href="https://redaksijakarta.github.io/news/tips-jitu-ampuh-bermain-bersama-kucing-lucky-neko-dan-pasti-bisa-menjadi-jackpot-besar.html">
         <link rel="shortcut icon" href="https://res.cloudinary.com/denamhdw5/image/upload/v1737197996/Lucky_Neko_lkcemh.png">
         <link rel="apple-touch-icon-precomposed" href="https://res.cloudinary.com/denamhdw5/image/upload/v1737205037/logo_bda5ab17-385e-428e-82db-2fc5ec906859_1729255069830_ysxsvm.png" />
+        <meta name="google-site-verification" content="Azf4Vb6QGooKnRNOmPt2bM83LIJe8cuHe54dys4SeCE" /> 
         <meta name="author" content="Bandung Daily News" />
         <meta name="publisher" content="Bandung Daily News" />
         <meta name="categories" content="website">
